# opencv_apps

./: .gitignore  CMakeLists.txt  README.md
docs/: system_overview.doc
src/: CMakeLists.txt
src/test_opencv/: CMakeLists.txt  opencv_hello.cpp
src/test_wx_opencv/: CMakeLists.txt  app.cpp  app.h  graph.cpp  graph.h  graph_canvas.cpp  graph_canvas.h  graph_frame.cpp  graph_frame.h  gui_classes.cpp  gui_classes.h  image.cpp  image.h  image_frame.cpp  image_frame.h  ocv_cam_canvas.cpp  ocv_cam_canvas.h  ocv_canvas.cpp  ocv_canvas.h  overview_frame.cpp  overview_frame.h  prerequisites.h  tools_frame.cpp  tools_frame.h  utils.cpp  utils.h  video_capture.cpp  video_capture.h  wx_form_builder_proj.fbp
